<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".view.signup.RegisterActivity">

   <ImageView
      android:id="@+id/tv_register"
      android:layout_width="match_parent"
      android:layout_height="260dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:src="@drawable/group_36"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      android:contentDescription="@string/logotegister"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

   <TextView
      android:id="@+id/textView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/montserratbold"
      android:text="@string/register_akun"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/tv_register"
      app:layout_constraintStart_toStartOf="@+id/tv_register"
      app:layout_constraintTop_toBottomOf="@+id/tv_register" />

   <EditText
      android:id="@+id/Edt_register_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@drawable/coustom"
      android:ems="10"
      android:hint="@string/masukan_nama_yang_benar"
      android:inputType="textPersonName"
      android:padding="15dp"
      android:minHeight="40dp"
      android:paddingHorizontal="5dp"
      app:layout_constraintEnd_toEndOf="@+id/tv_register"
      app:layout_constraintStart_toStartOf="@+id/tv_register"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      android:importantForAutofill="no"
      tools:ignore="VisualLintTextFieldSize" />
   <EditText
      android:id="@+id/Edt_register_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@drawable/coustom"
      android:ems="10"
      android:hint="@string/masukan_email_yang_benar"
      android:inputType="textEmailAddress"
      android:padding="15dp"
      android:paddingHorizontal="5dp"
      app:layout_constraintEnd_toEndOf="@+id/Edt_register_name"
      app:layout_constraintStart_toStartOf="@+id/Edt_register_name"
      app:layout_constraintTop_toBottomOf="@+id/Edt_register_name"
     />
   <com.dicoding.tugasstoryapp.view.customview.custom
      android:id="@+id/Edt_register_Password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@drawable/coustom"
      android:ems="10"
      android:hint="@string/masukan_password_yang_benar"
      android:inputType="textPassword"
      android:padding="15dp"

      android:paddingHorizontal="5dp"
      app:layout_constraintEnd_toEndOf="@+id/Edt_register_email"
      app:layout_constraintStart_toStartOf="@+id/Edt_register_email"
      app:layout_constraintTop_toBottomOf="@+id/Edt_register_email"
      android:importantForAutofill="no" />

   <Button
      android:id="@+id/btn_sign_up"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/sign_up"
      app:layout_constraintEnd_toEndOf="@id/Edt_register_Password"
      app:layout_constraintStart_toStartOf="@id/Edt_register_Password"
      app:layout_constraintTop_toBottomOf="@id/Edt_register_Password" />

   <com.google.android.material.divider.MaterialDivider
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

   <TextView
      android:id="@+id/tv_sudah_punya_akun"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/sudah_punya_akun"
      app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
      app:layout_constraintStart_toStartOf="@id/btn_sign_up"
      app:layout_constraintTop_toBottomOf="@id/divider" />

   <Button
      android:id="@+id/btn_sign_in"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/sign_in"
      app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
      app:layout_constraintStart_toStartOf="@id/btn_sign_up"
      app:layout_constraintTop_toBottomOf="@id/tv_sudah_punya_akun"
      tools:text="Sign In" />

   <ProgressBar
      android:id="@+id/pb_loading_screen"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:indeterminateTint="@color/blue_dark"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="@id/btn_sign_up"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/Edt_register_Password" />


</androidx.constraintlayout.widget.ConstraintLayout>